--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
   <h1>Network Speed Test</h1>
-  <script src="script.js"></script>
+  <script src="testNetworkSpeed.js"></script>
 </body>
 </html>
